force-app/main/default/objects/SVMXA360__ApplicationEventBus__e/SVMXA360__ApplicationEventBus__e.object-meta.xml
<CustomObject>
    <description>To publish events for processing of records in the payload based on operation type</description>
    <label>Application Event Bus</label>
    <pluralLabel>Application Events</pluralLabel>
</CustomObject>