force-app/main/default/objects/SVMXA360__ApplicationEventBus__e/fields/SVMXA360__OperationType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OperationType__c</fullName>
    <description>The type of execution - (create/delete/update)</description>
    <label>Operation Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>