force-app/main/default/objects/SVMXA360__ApplicationEventBus__e/fields/SVMXA360__Payload__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Payload__c</fullName>
    <description>The total records that were processed in that execution.</description>
    <label>Payload</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>