force-app/main/default/objects/SVMXA360__ApplicationEventBus__e/fields/SVMXA360__SourceObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceObjectAPIName__c</fullName>
    <description>The Salesforce object API name.</description>
    <label>Source Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>