force-app/main/default/objects/SVMXA360__ApplicationEventBus__e/fields/SVMXA360__SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceRecordId__c</fullName>
    <description>The source record Id</description>
    <label>Source Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>