force-app/main/default/objects/SVMXA360__ApplicationEventBus__e/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>Servicemax Event type</description>
    <label>Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>