force-app/main/default/objects/SVMXA360__ApplicationEventBus__e/fields/SVMXA360__UserId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserId__c</fullName>
    <description>The user who initiated the execution.</description>
    <label>User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>